# practiceguides

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  devenv.nix  litestream.dev.yml  pyproject.toml
.github/workflows/: docker.yml
app/: bun.lockb  manage.py  package-lock.json  package.json  tailwind.config.js
app/components/: book_card.html  book_card.py  composer_card.html  composer_card.py  exercise_card.html  exercise_card.py  main.html  main.py  panel.html  panel.py  panel_header.html  panel_header.py  piece_card.html  piece_card.py  skill_card.html  skill_card.py  spot_card.html  spot_card.py
app/passkey_auth/: apps.py  backend.py  models.py  sitemap.py  urls.py  views.py
app/passkey_auth/migrations/: 0001_initial.py  0002_alter_passkeycredential_user.py
app/passkey_auth/templates/: user_profile.html
app/static/: preload.min.js
app/static-src/: main.css  preload.js
app/studiowiki/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/: 404.html  base.html  base_external.html  base_htmx.html  base_internal.html
app/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
app/templates/snippets/: _logo.html  _nav_links.html  _og.html  _profile.html  _sidebar.html
app/wiki/: admin.py  apps.py  models.py  sitemap.py  types.py  urls.py  util.py  views.py
app/wiki/migrations/: 0001_initial.py  0002_alter_book_notes_standaloneexercise.py  0003_remove_book_notes_book_description.py  0004_alter_piece_book_alter_piece_composer_and_more.py  0005_alter_book_description_alter_piece_book_and_more.py  0006_alter_piece_large_sections_alter_piece_skills_and_more.py  0007_alter_spot_measures.py  0008_alter_piece_skills_alter_spot_skills.py  0009_book_created_at_book_updated_at_composer_created_at_and_more.py  0010_recording_description_alter_recording_file.py  0011_piece_external_recording_alter_recording_file.py  0012_rename_external_recording_piece_spotify_link_and_more.py  0013_spot_nickname.py  0014_pieceexercise_nickname_alter_step_spot.py  0015_alter_standaloneexercise_book_and_more.py  0016_alter_standaloneexercise_book.py  0019_piece_amazon_music_link.py  (+15 more)
(+61 files in other folders)
