[tool.poetry]
name = "studiowiki"
version = "0.1.0"
description = ""
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
webauthn = "^1.10.1"
django-htmx = "^1.16.0"
django-stubs = {version = "^4.2.4", extras = ["compatible-mypy"]}
django-stubs-ext = "^4.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
flake8 = "^6.1.0"
djlint = "^1.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = ["settings.py", "urls.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "studiowiki.settings"
