[tool.poetry]
name = "studiowiki"
version = "0.1.0"
description = ""
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
dj-database-url = "^2.1.0"
whitenoise = { extras = ["brotli"], version = "^6.5.0" }
webauthn = "^1.10.1"
django-htmx = "^1.16.0"
django-stubs = { version = "^4.2.4", extras = ["compatible-mypy"] }
django-stubs-ext = "^4.2.2"
django-unfold = "^0.20.1"
django-compression-middleware = "^0.5.0"
django-fastdev = "^1.8.0"
django-components = "^0.33"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
djlint = "^1.32.1"
pre-commit = "^3.4.0"
pyproject-flake8 = "^6.0.1"
djhtml = "^3.0.6"
python-lsp-server = { extras = ["all"], version = "^1.9.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = ["settings.py", "urls.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "studiowiki.settings"

[tool.isort]
skip = [".gitignore", ".dockerignore"]
skip_glob = [".venv/*"]
profile = "black"

[tool.flake8]
max-line-length = 88
